--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^11.8.0",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
